# fork-xla

./: .dir-locals.el  .gitignore  commands.py  data.py  evaluate.py  main.py  model.py  muon.py  parameters.py  plots.py  pyproject.toml  scatter.py  scratchpad.py  test.py  trainer.py  utils.py
evals/: __init__.py  blimp.py  eval.py  evaluations.py  evaluator.py  gsm8k.py  prototypes.py
evals/datasets/: __init__.py  arc.py  blimp.py  gsm8k.py  hellaswag.py  lambada.py  piqa.py
experiments/: launch_template.sh
experiments/data/: finetune.toml  gsm8k.toml  midtrain.toml  owt.toml  pretrain.toml
experiments/e0/: e0_baseline.sh  e0_fork_mergekilled.sh  e0_fork_standard.sh
experiments/e1/: e1_baseline.sh  e1_fork.sh  e1_fork_rightmost.sh
experiments/e2/: e2_baseline.sh  e2_baseline_scale.sh  e2_baseline_wider.sh  e2_fork.sh  e2_fork_rightmost.sh  e2_fork_scale.sh
experiments/final/: evaluate.sh  final_eval_pretrain_1_9B_fork.sh  final_eval_pretrain_1_9B_regular.sh  final_finetune_1_9B_fork.sh  final_finetune_1_9B_regular.sh  final_midtrain_1_9B_baseline.sh  final_midtrain_1_9B_fork.sh  final_midtrain_1_9B_regular.sh  final_pretrain_1_9B_baseline.sh  final_pretrain_1_9B_fork.sh  final_pretrain_1_9B_fork_short.sh  final_pretrain_1_9B_regular_short.sh
experiments/scripts/: develop
flywheel/: __init__.py  padded.py  pmd.py  strategy.py
scripts/: commands.md  crop_memmap.py  prepare_fineweb.py  prepare_gsm8k_aug.py  prepare_mmlu.py  prepare_openwebtext.py  prepare_pes2o.py  prepare_smoltalk.py  setup.sh
trainer/: __init__.py  finetuner.py  midtrainer.py  pretrainer.py
