[project]
name = "fork"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "accelerate>=1.1.1",
    "datasets>=3.1.0",
    "ipdb>=0.13.13",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "peft>=0.13.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.3.0",
    "transformers>=4.46.2",
    "wandb>=0.18.6",
    "huggingface-hub>=0.26.2",
    "click>=8.1.7",
    "mpi4py>=4.0.3"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "cronitor>=4.7.1",
    "debugpy>=1.8.18",
    "tiktoken>=0.12.0",
    "zstandard>=0.25.0",
]

