[project]
name = "fork"
version = "0.1.0"
description = "Forking transformer language models on TPU/XLA with JAX"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "datasets>=3.1.0",
    "ipdb>=0.13.13",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "jax[tpu]>=0.4.23; sys_platform == 'linux'",
    "jax[cuda13]>=0.4.23; sys_platform == 'win32'",
    "jax>=0.4.23; sys_platform == 'darwin'",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.5.0",
    "wandb>=0.18.6",
    "huggingface-hub>=0.26.2",
    "click>=8.1.7",
    "haliax"
]

[dependency-groups]
dev = [
    "cronitor>=4.7.1",
    "debugpy>=1.8.18",
    "tiktoken>=0.12.0",
    "zstandard>=0.25.0",
]

[tool.uv.sources]
haliax = { git = "https://github.com/marin-community/haliax" }

